ajout des nouvelles fonctionnalites

--- a/ordex/ordex/pom.xml
+++ b/ordex/ordex/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+<!--		//je veux la dependencies de twilio-->
+<!--		<dependency>-->
+<!--			<groupId>com.twilio.sdk</groupId>-->
+<!--			<artifactId>twilio</artifactId>-->
+<!--			<version>8.34.0</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
