--- a/ordex/ordex/src/main/resources/application.properties
+++ b/ordex/ordex/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # App Name (optional)
 spring.application.name=Ordex
-
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ordex_db?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/ordex_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ordex_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 # Password for the MySQL database
-spring.datasource.password=#aissam2003#
+spring.datasource.password=root
 # JPA & Hibernate
 # Automatically create/update tables
 spring.jpa.hibernate.ddl-auto=update
